# voice_controlled_robot

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  log.txt  package.xml  readme.md  requirements.txt  setup.py
config/: diff_drive_controller.yaml
front/: index.html
launch/: voice_controlled_robot_gazebo.launch
scripts/: voice_controlled_robot_node.py
src/voice_controlled_robot/: robot_controller.py  server.py  voice_analyzer.py
urdf/: voice_controlled_robot.urdf
